[package]
name = "enclave-cc-test"
version = "0.2.0"
edition = "2018"
description = "An example of ttrpc."

[dependencies]
protobuf = { version = "=2.14.0", features = ["with-serde"] }
bytes = "0.4.11"
libc = "0.2.58"
byteorder = "1.3.2"
log = "0.4.11"
simple-logging = "2.0.2"
nix = "0.23.0"
#ttrpc = { version = "0.5.0", features = ["async"] }
#ttrpc = { path = "/root/yanrong/ttrpc-rust", features = ["async"] }
ttrpc = { git = "https://github.com/haosanzi/ttrpc-rust", features = ["async"] }

ctrlc = { version = "3.0", features = ["termination"] }
# Async runtime
tokio = { version = "1.14.0", features = ["full"] }
async-trait = "0.1.42"

anyhow = "1.0.32"
clap = "2.33.3"

chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }


[[example]]
name = "async-client"
path = "./async-client.rs"

[build-dependencies]
ttrpc-codegen = "0.2.0"

